src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__tests__draw_blocks_whole_layout_help_panel.snap
---
source: src/core/status/ui/draw_blocks/mod.rs
expression: setup.terminal.backend()
---
"    name          state       status      cpu      memory/limit          id         image     ↓ rx      ↑ tx                                  ( h ) exit help   "
"╭ Containers 1/3 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮╭──────────────╮"
"│⚪ container_1   ✓ running   Up 1 ho╭ 0.00.000 ──────────────────────────────────────────────────────────────────────────╮                    ││▶ pause       │" Hidden by multi-width symbols: [(2, " ")]
"│   container_2   ✓ running   Up 2 ho│                                                                                    │                    ││  restart     │"
"│   container_3   ✓ running   Up 3 ho│                                       88                                           │                    ││  stop        │"
"│                                    │                                       88                                           │                    ││  delete      │"
"│                                    │                                       88                                           │                    ││              │"
"╰────────────────────────────────────│              ,adPPYba,   8b,     ,d8  88   ,d8    ,adPPYba,  8b,dPPYba,            │────────────────────╯╰──────────────╯"
"╭ Logs 3/3 - container_1 - image_1 ──│             a8"     "8a   `Y8, ,8P'   88 ,a8"    a8P_____88  88P'   "Y8            │────────────────────────────────────╮"
"│  line 1                            │             8b       d8     )888(     8888[      8PP"""""""  88                    │                                    │"
"│  line 2                            │             "8a,   ,a8"   ,d8" "8b,   88`"Yba,   "8b,   ,aa  88                    │                                    │"
"│▶ line 3                            │              `"YbbdP"'   8P'     `Y8  88   `Y8a   `"Ybbd8"'  88                    │                                    │"
"│                                    │                                                                                    │                                    │"
"│                                    │                 Local development environment management for Clikd                 │                                    │"
"│                                    │                                                                                    │                                    │"
"│                                    │ ( tab ) or ( shift+tab ) change panels                                             │                                    │"
"│                                    │ ( ↑ ↓ ) or ( j k ) or ( Home End ) scroll vertically                               │                                    │"
"│                                    │ ( ← → ) horizontal scroll across logs                                              │                                    │"
"│                                    │ ( ctrl ) increase scroll speed, used in conjunction scroll keys                    │                                    │"
"│                                    │ ( enter ) send docker container command                                            │                                    │"
"│                                    │ ( e ) exec into a container                                                        │                                    │"
"│                                    │ ( f ) force clear the screen & redraw the gui                                      │                                    │"
"│                                    │ ( h ) toggle this help information - or click heading                              │                                    │"
"│                                    │ ( s ) save logs to file                                                            │                                    │"
"│                                    │ ( m ) toggle mouse capture - if disabled, text on screen can be selected & copied  │                                    │"
"│                                    │ ( F1 ) or ( / ) enter filter mode                                                  │                                    │"
"│                                    │ ( # ) enter log search mode                                                        │                                    │"
"│                                    │ ( 0 ) stop sort                                                                    │                                    │"
"│                                    │ ( 1 - 9 ) sort by header - or click header                                         │                                    │"
"╰────────────────────────────────────│ ( - = ) change log section height                                                  │────────────────────────────────────╯"
"╭───────────────────────── cpu 03.00%│ ( \ ) toggle log section visibility                                                │──────╮╭────────── ports ───────────╮"
"│10.00%│       ••                    │ ( esc ) close dialog                                                               │      ││       ip   private   public│"
"│      │      • •                    │ ( q ) quit at any time                                                             │      ││               8001         │"
"│      │    ••  •                    │                                                                                    │      ││127.0.0.1      8003     8003│"
"│      │   •    •                    │         currently an early work in progress, all and any input appreciated         │      ││                            │"
"│      │ ••      • •                 │                          https://github.com/clikd-inc/cli                          │      ││                            │"
"│      │•        ••                  │                                                                                    │      ││                            │"
"│      │•        •                   ╰────────────────────────────────────────────────────────────────────────────────────╯      ││                            │"
"│      │                                                        ││         │                                                     ││                            │"
"╰───────────────────────────────────────────────────────────────╯╰───────────────────────────────────────────────────────────────╯╰────────────────────────────╯"
